--- a/talk.ipynb
+++ b/talk.ipynb
@@ -1602,7 +1602,32 @@
     "Note-taker\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Meetings are expensive.\n",
+    "They spend people's time,\n",
+    "they need to be set up in advance,\n",
+    "and there are limited slots.\n",
+    "\n",
+    "Make the most out of the retrospective meeting\n",
+    "by assigning roles in advance.\n",
+    "The presenter is usually the person who wrote the report.\n",
+    "\n",
+    "The moderator is most often the line manager involved,\n",
+    "but can be anyone.\n",
+    "Another person needs to take notes,\n",
+    "or the meeting will have been a waste of time.\n",
+    "\n",
+    "While the role is named\n",
+    "\"presenter\",\n",
+    "the goal is not to read the report aloud.\n",
+    "The presenter presents each point that needs agreement,\n",
+    "and opens the floor for questions.\n",
+    "\n",
+    "The moderator makes sure everyone's voice is heard,\n",
+    "and that a clear decision on what to do is reached.\n",
+    "The note taker summarizes points made,\n",
+    "and the final decision.\n"
    ]
   },
   {
@@ -1632,7 +1657,18 @@
     "Announce\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "The notes are best attached to the retrospective.\n",
+    "They give context for why things were analysed,\n",
+    "or decided,\n",
+    "a certain way.\n",
+    "\n",
+    "Then whatever changes the decisions pointed to should be made.\n",
+    "Finally,\n",
+    "the draft is ready for\n",
+    "\"final approval\".\n",
+    "Announce to the team that this is so.\n"
    ]
   },
   {
@@ -1662,7 +1698,19 @@
     "write-ups\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "There should be a clear point where the retrospective is\n",
+    "\"done\".\n",
+    "The final approval is\n",
+    "\"mechanical\":\n",
+    "it checks that the decisions that have been reached\n",
+    "(in the notes)\n",
+    "have been applied.\n",
+    "\n",
+    "There should be a list of retrospective write-ups that are\n",
+    "\"done\",\n",
+    "and the new retrospective added to the list."
    ]
   },
   {
@@ -1686,7 +1734,17 @@
     "The main point!\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "The final approval of the retrospective is still not the end of the incident!\n",
+    "Assuming some recommendations have been made,\n",
+    "and documented as tickets or issues\n",
+    "in the tracking system used,\n",
+    "these need to be implemented.\n",
+    "\n",
+    "Again,\n",
+    "this is the main point of the retrospective:\n",
+    "it is only worthwhile if the recommendations are implemented."
    ]
   },
   {
@@ -1711,7 +1769,18 @@
     "\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "The recommendations,\n",
+    "as tickets,\n",
+    "need to be prioritized with all other tickets assigned to the team.\n",
+    "This should be done using whatever process is already used for\n",
+    "prioritization.\n",
+    "\n",
+    "It should be\n",
+    "*clearly noted*\n",
+    "what is the relative priority,\n",
+    "and when it can be expected to be tackled."
    ]
   },
   {
@@ -1738,7 +1807,20 @@
     "Searchable\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Each recommendation should be linked to the retrospective it was\n",
+    "made in.\n",
+    "This can be done by labels or links,\n",
+    "as long as it is searchable\n",
+    "*both ways*:\n",
+    "by retrospective\n",
+    "(show all recommendations in the retrospective)\n",
+    "or by issue\n",
+    "(show the retrospective that made this recommendation).\n",
+    "\n",
+    "This allows tracking the issues\n",
+    "and seeing how the team is making progress on implementing those."
    ]
   },
   {
@@ -1765,7 +1847,13 @@
     "Document\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "It is worthwhile to make specific commitments\n",
+    "about when these things will be tackled.\n",
+    "Otherwise,\n",
+    "it is easy to push a recommendation to\n",
+    "\"next sprint\"."
    ]
   },
   {
@@ -1789,7 +1877,16 @@
     "Not written in stone\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "It is ok to decide a recommendation is not worthwhile.\n",
+    "Maybe things have changed,\n",
+    "maybe implementing it turns out to be harder than it was thought to be.\n",
+    "\n",
+    "In either case,\n",
+    "changing or removing the recommendation is a decision that can be made.\n",
+    "Document it in the recommendation\n",
+    "and in the retrospective analysis."
    ]
   },
   {
@@ -1813,7 +1910,19 @@
     "Some issues cause multiple incidents\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "It will often be the case that some recommendations come up often.\n",
+    "This is the case with issues that are hard to solve\n",
+    "and persistent source of problems.\n",
+    "\n",
+    "In that case,\n",
+    "properly model this in the ticket system.\n",
+    "For example,\n",
+    "you can use\n",
+    "\"tracking tickets\"\n",
+    "or multiple links,\n",
+    "as the case may be."
    ]
   },
   {
@@ -1834,10 +1943,17 @@
     "\\frametitle{Communicating Status of Recommendations}\n",
     "\n",
     "\\pause\n",
-    "Planned/in-progress/dropped\n",
+    "Planned/in-progress/dropped/done\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "It should be easy to see if a recommendation is still planned,\n",
+    "in progress,\n",
+    "dropped,\n",
+    "or done.\n",
+    "Ideally,\n",
+    "the state or labels on the ticket reflect that.\n"
    ]
   },
   {
@@ -1860,7 +1976,15 @@
     "\\pause\n",
     "From here to there\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Doing retrospectives is a complicated process.\n",
+    "If it is new to the team,\n",
+    "do not expect to be an expert in it overnight.\n",
+    "\n",
+    "The team needs time to learn,\n",
+    "and so do the individuals in the team.\n",
+    "Mistakes will be made."
    ]
   },
   {
@@ -1887,7 +2011,30 @@
     "Template\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Start by clearly documenting the process.\n",
+    "Have a clear step-by-step manual.\n",
+    "\n",
+    "This should include\n",
+    "*when*\n",
+    "to do a retrospective\n",
+    "(who decides what's an incident?\n",
+    "does every incident get one?)\n",
+    "and who does it.\n",
+    "It should also include the exact systems used.\n",
+    "\n",
+    "What system is used to share the draft?\n",
+    "To annotate it with comments?\n",
+    "To open recommendations?\n",
+    "What labels or directories need to be used?\n",
+    "\n",
+    "The most important part is a template.\n",
+    "The template should include all parts that need to be filled out.\n",
+    "\n",
+    "If some fields are optional, note it.\n",
+    "If there are writing guidelines,\n",
+    "note them in the template."
    ]
   },
   {
@@ -1920,7 +2067,28 @@
     "Reverse roles in step 1\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "See one,\n",
+    "do one,\n",
+    "teach one\n",
+    "is how doctors learn.\n",
+    "The first step is to see someone doing it:\n",
+    "have a\n",
+    "\"shadow\"\n",
+    "who follows the retrospective writer through the steps:\n",
+    "research,\n",
+    "write-up,\n",
+    "and finalization.\n",
+    "\n",
+    "Then,\n",
+    "have a\n",
+    "\"reverse shadow\":\n",
+    "someone who watches the new person doing it\n",
+    "and offers real-time feedback.\n",
+    "Finally,\n",
+    "have the student become the teacher the next time\n",
+    "someone needs to be taught."
    ]
   },
   {
@@ -1944,7 +2112,16 @@
     "A new job responsibility\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Writing a retrospective is a new job responsibility.\n",
+    "This means that it needs to be allocated for when planning.\n",
+    "\n",
+    "This means both short-term planning,\n",
+    "as replacing some of the work in the\n",
+    "\"sprint\",\n",
+    "and long term planning,\n",
+    "as in taking some percentage of total team capacity.\n"
    ]
   },
   {
@@ -1962,13 +2139,20 @@
    "source": [
     "```{=latex}\n",
     "\\begin{frame}\n",
-    "\\frametitle{Allocating time}\n",
+    "\\frametitle{Integrating feedback}\n",
     "\n",
     "\\pause\n",
-    "A new job responsibility\n",
+    "Professional and clear\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Retrospectives,\n",
+    "and incident process in general,\n",
+    "tend to be stressful.\n",
+    "Keep feedback professional and clear.\n",
+    "Ask for what you want,\n",
+    "without making allegations or accusations."
    ]
   },
   {
@@ -1992,7 +2176,12 @@
     "What's \"good enough\"?\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Have a clear standard:\n",
+    "what is the level of retrospective we want?\n",
+    "For example,\n",
+    "what is the level of writing clarity you strive for?"
    ]
   },
   {
@@ -2016,7 +2205,13 @@
     "When is it due?\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Have a clear guideline on\n",
+    "*when*\n",
+    "the first draft should be done,\n",
+    "when feedback is gathered,\n",
+    "and when it is addressed."
    ]
   },
   {
@@ -2040,7 +2235,12 @@
     "Getting better\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Processes are not static.\n",
+    "Maybe your template is missing some fields.\n",
+    "Maybe the guidelines for how to use the ticket systems are unclear,\n",
+    "or use it badly."
    ]
   },
   {
@@ -2064,7 +2264,12 @@
     "Process for update\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "There needs to be a clear process for updating the retrospective process.\n",
+    "Who can suggest changes?\n",
+    "Who needs to authorize them?\n",
+    "Who needs to be consulted?"
    ]
   },
   {
@@ -2088,7 +2293,13 @@
     "Announce clearly\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "If the process changes,\n",
+    "make a clear announcement.\n",
+    "Note what changed,\n",
+    "why,\n",
+    "and any context needed."
    ]
   },
   {
@@ -2115,7 +2326,17 @@
     "Unclear\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Some changes are more clearly needed.\n",
+    "For example,\n",
+    "someone going through the process\n",
+    "might notice that the part about setting up a meeting\n",
+    "is completely missing details.\n",
+    "Maybe the guidelines for how to phrase recommendations are unclear.\n",
+    "\n",
+    "This is a good time to change the retrospective process,\n",
+    "following the update process above."
    ]
   },
   {
@@ -2142,7 +2363,19 @@
     "Make it easy to analyze\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "It is worthwhile to complemenet this with a more intentional\n",
+    "iteration process.\n",
+    "Take time to read through reviews,\n",
+    "notes,\n",
+    "and recommendations,\n",
+    "and see if there are any issues that keep coming up.\n",
+    "Maybe the process can be improved to prevent those?\n",
+    "\n",
+    "For this to work,\n",
+    "it needs to be easy to analyse the retrospectives.\n",
+    "This is where the list comes in handy."
    ]
   },
   {
@@ -2166,7 +2399,16 @@
     "Can different teams have different processes?\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "What is the level of standardization you want?\n",
+    "There is no one answer.\n",
+    "\n",
+    "Some organizations tend towards more standards,\n",
+    "while others tend to have teams which decide on their processes.\n",
+    "Make it clear which teams use which process,\n",
+    "and what kind of standards you do expect\n",
+    "at different levels."
    ]
   },
   {
@@ -2193,7 +2435,16 @@
     "Discuss\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Avoid counting only on yourself and your team when improving the\n",
+    "retrospective process.\n",
+    "Research what other teams\n",
+    "(internal and external)\n",
+    "are doing.\n",
+    "Discuss with people what you are doing.\n",
+    "\n",
+    "Make an intentional effort to incorporate new information into the process."
    ]
   },
   {
@@ -2216,7 +2467,15 @@
     "Highlights\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "This is a long talk\n",
+    "because it is a complicated topic.\n",
+    "Incident retrospectives are easy to get wrong!\n",
+    "\n",
+    "That said,\n",
+    "I want to highlight some of the things\n",
+    "that are most important."
    ]
   },
   {
@@ -2243,7 +2502,15 @@
     "\"Humans are not the cause\"\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Blamelessness is an implicit part of CAST.\n",
+    "Humans,\n",
+    "and human nature,\n",
+    "are part of the environment unless we know how to modify humans.\n",
+    "\n",
+    "This means humans are never part of the cause.\n",
+    "Make it painfully clear that this is so.\n"
    ]
   },
   {
@@ -2267,7 +2534,13 @@
     "Process\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Consistency is important.\n",
+    "Have people follow the process.\n",
+    "If the process is bad,\n",
+    "fix it,\n",
+    "don't work around it!"
    ]
   },
   {
@@ -2291,7 +2564,14 @@
     "Is it useful?\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "Retrospectives take a lot of time and effort.\n",
+    "They better be worth it.\n",
+    "\n",
+    "Are they?\n",
+    "Check recommendations,\n",
+    "see how they fared."
    ]
   },
   {
@@ -2318,7 +2598,10 @@
     "Add what's needed\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "The meta-process is important.\n",
+    "Iterate and keep improving the retrospective process itself."
    ]
   },
   {
@@ -2342,7 +2625,18 @@
     "Better incidents!\n",
     "\n",
     "\\end{frame}\n",
-    "```"
+    "```\n",
+    "\n",
+    "There is one goal:\n",
+    "\"better incident\".\n",
+    "Not necessarily\n",
+    "\"fewer incidents\",\n",
+    "although this is one measure.\n",
+    "\n",
+    "\"Incidents that are easier to resolve\",\n",
+    "\"incidents with less customer impact\",\n",
+    "and more are all within the purview of the retrospective process.\n",
+    "Know what you are optimizing for!"
    ]
   },
   {
@@ -2350,6 +2644,32 @@
    "metadata": {},
    "source": [
     "### Enjoy!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "```{=latex}\n",
+    "\\begin{frame}\n",
+    "\\frametitle{Do}\n",
+    "\n",
+    "\\pause\n",
+    "Start doing retrospectives...\n",
+    "\n",
+    "\\pause\n",
+    "...and iterating on the process!\n",
+    "\n",
+    "\\end{frame}\n",
+    "```\n",
+    "\n",
+    "Whether you are doing retrospectives\n",
+    "and wish you could do them better,\n",
+    "or whether you haven't started,\n",
+    "I hope you start on the path.\n",
+    "Let me know how it works out for you!"
    ]
   },
   {
